--- a/ask.html
+++ b/ask.html
@@ -6,7 +6,7 @@
 
     <meta name="facebook-domain-verification" content="cyvlnracvr10p6ymoooo9hpa8r30qh" />
     <title>100 Days of Python</title>
-	    <!-- Additional CSS Files -->
+	    <!-- Additional CSS Filesdw -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css">
